--- a/config.json.example
+++ b/config.json.example
@@ -1,5 +1,5 @@
 {
-  "source_url": "https://polymorph-distribution.netlify.app/source.json",
+  "source_url": "https://example.com/source.json",
   "developer_id": "",
   "email": "",
   "security_token": "",
