--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # 機密情報を含む設定ファイル
 config.json
+configure.json
 
 # Python
 __pycache__/
@@ -45,3 +46,6 @@ Thumbs.db
 .env.local
 
 .claude
+
+*.p8
+ApiKey_*.p8
