--- a/configure.json.example
+++ b/configure.json.example
@@ -3,5 +3,9 @@
   "developer_id": "",
   "email": "",
   "security_token": "",
-  "adp_id": ""
+  "adp_id": "",
+  "issuer_id": "",
+  "key_id": "",
+  "private_key_path": ""
+}
 }
